{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 76,
  "lineage": "d4334321-0983-c975-8de8-1a2e1bfec265",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-vm01nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/tstvmrg/providers/Microsoft.Network/networkInterfaces/tstwvm01-nic",
            "internal_domain_name_suffix": "abax3njzhupenbdpxkybz24gqf.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/tstvmrg/providers/Microsoft.Network/publicIPAddresses/tstwvm01-pubip",
                "subnet_id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA/subnets/Public_Subnet"
              }
            ],
            "location": "centralus",
            "name": "tstwvm01-nic",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "tstvmrg"
          },
          "dependencies": [
            "azurerm_public_ip.tf-vm01pubip",
            "azurerm_resource_group.tf-vmrg01",
            "azurerm_resource_group.tf-vnetrg01",
            "azurerm_subnet.tf-sbt01",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-vm02nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/tstvmrg/providers/Microsoft.Network/networkInterfaces/tstwvm02-nic",
            "internal_domain_name_suffix": "abax3njzhupenbdpxkybz24gqf.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.0.20",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA/subnets/Private_Subnet"
              }
            ],
            "location": "centralus",
            "name": "tstwvm02-nic",
            "private_ip_address": "10.1.0.20",
            "private_ip_addresses": [
              "10.1.0.20"
            ],
            "resource_group_name": "tstvmrg"
          },
          "dependencies": [
            "azurerm_resource_group.tf-vmrg01",
            "azurerm_resource_group.tf-vnetrg01",
            "azurerm_subnet.tf-sbt02",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-nsg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/networkSecurityGroups/tstwvm01_pub_nsg",
            "location": "centralus",
            "name": "tstwvm01_pub_nsg",
            "resource_group_name": "vnetrg01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "myiptovm01custom3389",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "99.248.178.39",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-nsg02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/networkSecurityGroups/tstwvm02_pri_nsg",
            "location": "centralus",
            "name": "tstwvm02_pri_nsg",
            "resource_group_name": "vnetrg01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.1.0.16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "vm01tovm02custom3389",
                "priority": 301,
                "protocol": "Tcp",
                "source_address_prefix": "10.1.0.0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-vm01pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/tstvmrg/providers/Microsoft.Network/publicIPAddresses/tstwvm01-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.69.185.234",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "tstwvm01-pubip",
            "resource_group_name": "tstvmrg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.tf-vmrg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-sbt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA/subnets/Public_Subnet",
            "name": "Public_Subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "vnetrg01",
            "virtual_network_name": "VNetA"
          },
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg01",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-sbt02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.16/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA/subnets/Private_Subnet",
            "name": "Private_Subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "vnetrg01",
            "virtual_network_name": "VNetA"
          },
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg01",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-nsg_associate01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA/subnets/Public_Subnet",
            "network_security_group_id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/networkSecurityGroups/tstwvm01_pub_nsg",
            "subnet_id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA/subnets/Public_Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-nsg01",
            "azurerm_resource_group.tf-vnetrg01",
            "azurerm_subnet.tf-sbt01",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-nsg_associate02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA/subnets/Private_Subnet",
            "network_security_group_id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/networkSecurityGroups/tstwvm02_pri_nsg",
            "subnet_id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA/subnets/Private_Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-nsg02",
            "azurerm_resource_group.tf-vnetrg01",
            "azurerm_subnet.tf-sbt02",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf-vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b57e4100-3d39-461e-846f-bab01cf3c685",
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA",
            "location": "centralus",
            "name": "VNetA",
            "resource_group_name": "vnetrg01",
            "tags": {
              "Created by": "Terraform",
              "Env": "Testing",
              "Owner": "Shashank"
            }
          },
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf-vnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "38e4c360-5209-452a-83f0-85762c94af2d",
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetB",
            "location": "centralus",
            "name": "VNetB",
            "resource_group_name": "vnetrg01",
            "tags": {
              "Created by": "Terraform",
              "Env": "Testing",
              "Owner": "Shashank"
            }
          },
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tf-vnetAtoVnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA/virtualNetworkPeerings/peervnetAtovnetB",
            "name": "peervnetAtovnetB",
            "remote_virtual_network_id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetB",
            "resource_group_name": "vnetrg01",
            "use_remote_gateways": false,
            "virtual_network_name": "VNetA"
          },
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg01",
            "azurerm_virtual_network.tf-vnet01",
            "azurerm_virtual_network.tf-vnet02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tf-vnetBtoVnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetB/virtualNetworkPeerings/peervnetBtovnetA",
            "name": "peervnetBtovnetA",
            "remote_virtual_network_id": "/subscriptions/c810a66c-99ba-4a2b-9b4a-0ceacd9e1447/resourceGroups/vnetrg01/providers/Microsoft.Network/virtualNetworks/VNetA",
            "resource_group_name": "vnetrg01",
            "use_remote_gateways": false,
            "virtual_network_name": "VNetB"
          },
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg01",
            "azurerm_virtual_network.tf-vnet01",
            "azurerm_virtual_network.tf-vnet02"
          ]
        }
      ]
    }
  ]
}